# entrance-1c-department

./: CMakeLists.txt  client.py  readme.md
easylogging/: CMakeLists.txt
server/: CMakeLists.txt  client.cpp  client.hpp  server.cpp  server.hpp  task.cpp  tasks.hpp
src/: client_main.cpp  main.cpp  server_main.cpp
